--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ All of these indexes and the environmental justice indicators are in the topPoll
 ### greenhouse.rank
 - Greenhouse 100 Rank; the company's rank based on greenhouse gas emissions from large facilities in 2018
 
-#### toxic.water.rank
+### toxic.water.rank
 - Toxic 100 Water Rank; the company's rank based on water toxics from large facilities in 2018
 
 ### toxic.air.poor
